task#51: update to camel case
- fix base project security bugs
